@@ -9,6 +9,7 @@ New features:
 ..F....... [ZBX-5127] regular expressions form redesign (Vedmak)
 
 Bug fixes:
+..F....... [ZBX-3396] added error message if FreeType support is missing (Toms)
 ...G...... [ZBX-4355] fixed response on check inodes on file systems not supporting them (Sasha)
 ..F....... [ZBX-875] fixed duplicate Y-scale (Oleg)
 ..F....... [ZBX-3934] unified color codes validation in frontend (Vedmak)
